discord_themes/project_nova/projectNova_SourrR34.css
/* ... */
.mention-3XBnnZ:hover,
.unread-2wipsx:hover{
    background: var(--accent-2);
}
/* SERVER BAR */
[class*="folder-"],
[class*="folder-"][class*="hover-"]{
    background: none;
}
.item-2LIpTv{
    background: var(--accent);
}
.wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub,
.wrapper-3kah-n:hover .childWrapper-1j_1ub{
    color: var(--accent-contrast)
}
/* SIDEBAR */
.platform-win [class*="sidebar-"]{
    border-radius: unset;
}
:root [class*="privateChannels-"] [class*="scroller-"]{
    background: none; /*keeps server and dm sidebar same bg*/
}
:root .container-YkUktl{
    background: none;
}
:root .container-1NXEtd,
.container-1NXEtd+.panels-3wFtMD,
.privateChannels-oVe7HL+.panels-3wFtMD{
    background: var(--background-secondary);
}
.sidebar-1tnWFu{
    width: 320px; /*increased width for longer names*/
}
.channel-1Shao0{
    max-width: 96.4%; /*default: 224px. 96.4% very close*/
}
/* DIRECT MESSAGES, CHANNEL LIST AND MEMBER LIST */
[class*="interactiveSelected-"],
.interactive-26HRN_:focus-within,
.interactive-26HRN_:hover,
.interactive-iyXY_x .highlighted-Q8Nll-,
[class*="modeSelected-"] .link-1_kTxV,
[class*="modeSelected-"]:hover .link-1_kTxV,
[class*="modeSelected-"] .icon-2W8DHg,
[class*="modeSelected-"] .name-28HaxV,
[class*="modeSelected-"] .actionIcon-2sw4Sl,
[class*="modeUnread-"] .icon-2W8DHg,
[class*="modeUnread-"] .name-28HaxV,
[class*="modeConnected-"] .icon-2W8DHg,
[class*="modeConnected-"] .name-28HaxV,
[class*="modeConnected-"] .actionIcon-2sw4Sl,
.wrapper-NhbLHG:hover .icon-2W8DHg,
.wrapper-NhbLHG:hover .name-28HaxV,
.wrapper-NhbLHG:hover .actionIcon-2sw4Sl,
.selected-1-Z6gm .layout-1qmrhw,
.selected-1-Z6gm .layout-1qmrhw .activity-2EQDZv,
.clickable-28SzVr.container-1oeRFJ:hover{
    color: var(--accent);
}
.unreadRelevant-2f-VSK{ /*unread marker*/
    background: var(--accent);
}
[class*="interactiveSelected-"],
[class*="modeSelected-"] .link-1_kTxV,
.selected-1-Z6gm .layout-1qmrhw{
    border: 3px solid;
}
[class*="interactiveSelected-"],
.interactive-26HRN_:focus-within,
.interactive-26HRN_:hover,
[class*="modeSelected-"] .link-1_kTxV,
.wrapper-NhbLHG:hover .link-1_kTxV,
.selected-1-Z6gm .layout-1qmrhw,
.clickable-28SzVr.container-1oeRFJ:hover {
    background: hsl(var(--accent-hsl) / .1);
}
.clickable-28SzVr:hover .layout-1qmrhw{
    background-color: unset;
}
.interactive-26HRN_,
.wrapper-NhbLHG .link-1_kTxV,
.layout-1qmrhw,
.clickable-28SzVr.container-1oeRFJ{
    border-radius: 9999px;
}
.interactive-iyXY_x .highlighted-Q8Nll-,
.interactive-26HRN_:focus-within:not([class*="interactiveSelected-"]),
.interactive-26HRN_:hover:not([class*="interactiveSelected-"]),
.wrapper-NhbLHG:hover:not([class*="modeSelected-"]) .name-28HaxV,
[class*="modeUnread-"] .name-28HaxV,
[class*="modeConnected-"] .name-28HaxV,
.clickable-28SzVr.container-1oeRFJ:hover{
    text-shadow: 0 0 5px;
}
[class*="modeConnected-"] .iconContainer-21RCa3,
[class*="modeConnected-"] .actionIcon-2sw4Sl,
.wrapper-NhbLHG:hover:not([class*="modeSelected-"]) .icon-2W8DHg,
.wrapper-NhbLHG:hover:not([class*="modeSelected-"]) .actionIcon-2sw4Sl{
    filter: drop-shadow(0 0 5px)
}
/* FRIENDS TAB */
[class*="tabBody-"],
:root .themed-Hp1KC_{
    background: var(--background-primary);
}
[class*="peopleListItem-"].active-2UF8Zh,
[class*="peopleListItem-"]:hover{
    background: hsl(var(--accent-hsl) / .2);
}
[class*="nowPlayingColumn"],
[class*="nowPlayingColumn"] .container-1oAagU{
    background: none;
}
/* FAMILY CENTER */
#requests-tab,
#activity-tab{
    background: var(--background-primary);
}
/* MEMBER LIST */
.container-2o3qEW{
    background: none;
}
.membersWrap-3NUR2t{
    height: 100%;
}
.member-48YF_l{
    background: none; /*member list item in servers*/
}
/* USER POPOUTS + MODALS */
[class*="userProfileInnerThemedNonPremium-"]{
    background: var(--popout-background);
}
/* Weird Username Support */
[class*="userPopoutOverlayBackground-"] [class*="nickname-"],
[class*="userProfileModalOverlayBackground-"] [class*="text-lg-semibold-"]{
    line-height: 2.8;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
[class*="userPopoutOverlayBackground-"] [class*="userTag-"],
[class*="userProfileModalOverlayBackground-"] [class*="nameTagSmall-"]{
    font-size: 16px; /*default: 14px*/
    line-height: 2.8;
}
/* Modal Tabs*/
[aria-label="User Profile Modal"] [class*="tabBar-"]{
    justify-content: space-evenly;
}
.top-Ktfr_T .themed-qqoYp3.item-2GWPIy:hover,
.top-Ktfr_T .selected-1sf9UK.themed-qqoYp3.item-2GWPIy{
    border-bottom-color: var(--accent);
}
/* Mutual Friends + Servers */
[class*="emptyIconFriends-"],
[class*="emptyIconGuilds-"]{
    display: none;
}
/* Roles */
.roles-3vQPxb .roleRemoveIcon-387wKV,
.roleWrapper-2IhvNd .roleRemoveIcon-387wKV{
    left: calc(100% - 10px);
}
.roles-3vQPxb .role-2TIOKu,
.roleWrapper-2IhvNd .role-2TIOKu{
    border: 3px solid rgb(255,255,255,.3);
    padding: 10px 4px;
}
.roles-3vQPxb .role-2TIOKu:hover,
.roleWrapper-2IhvNd .role-2TIOKu:hover{
    border-color: rgb(255,255,255,.5);
}
/* CHANNEL TEXT AREA */
.form-3gdLxP{
    margin-top: 0;
}
.form-3gdLxP:before{
    content: none;
}
[class*="channelTextArea-"]{
    border: 3px solid var(--accent);
    border-radius: 12px;
}
[class*="channelTextArea-"] [class*="themedBackground-"]{
    background: none;
}
/* Reply Bar */
.name-3DDHNY{
    display: inline-block;
    max-width: 25ch;
    overflow: hidden;
    text-overflow: ellipsis;
}
/* MESSAGE AREA */
.divider-2rZFJK{
    border-color: var(--accent);
}
/* New Member Badge */
[class*="newMemberBadge-"]{
    width: unset;
    height: calc(1rem + 6px);
}
[class*="newMemberBadge-"] svg{
    display: none;
}
[class*="newMemberBadge-"]:before{
    content: "New";
    text-shadow: 0 0 2px;
    border: 1px solid;
    border-radius: 8px;
    margin-left: 8px;    
    font-size: 12px;
    padding: 1px 5px;
}
/* Replied Messages */
.repliedMessage-3Z6XBG:before{
    border-color: var(--accent);
}
/* ... */

